--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -37,8 +37,8 @@ body {
 	font-size:19px;
 	padding:5px 5px;
 	text-decoration:none;
-    text-shadow:0px 1px 0px #283966;
-    text-align: center;
+   text-shadow:0px 1px 0px #283966;
+   text-align: center;
 }
 .myButton:hover {
 	background:linear-gradient(to bottom, #048359 5%, #0dc789 100%);
@@ -48,6 +48,18 @@ body {
     
 }
 
+.myButton-disable {
+	background-color:#727272;
+	border-radius:10px;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:19px;
+	padding:5px 5px;
+	text-decoration:none;
+    width:100%;
+    text-align: center;
+}
 
 
 /*
@@ -269,6 +281,7 @@ Body Template
    border:solid 1px #3874de; 
 }
 
+
 /*
 ------------------------
 NIGHT MODE
@@ -309,6 +322,23 @@ NIGHT MODE
    color:#FFFFFF;
    padding:5px;
 }
+.nightmode-content .table,
+.nightmode-content h4,
+.nightmode-content h6,
+.nightmode-content .card-title{
+   color:#3874de !important;
+}
+.nightmode-content input{
+   color:#e0e0e0 !important;
+}
+
+.nightmode-content .card{
+   border:1px solid #4d6389;
+   border-radius: 20px;
+   color:#e0e0e0 !important;
+   background-color: transparent !important;
+}
+
 
 /*
 ------------------------
@@ -341,4 +371,18 @@ DAY MODE
 .daymode-boxPanel h6{
    color:#3874de;
    padding:5px;
+}
+.daymode-content .table,
+.daymode-content h4,
+.daymode-content h6,
+.daymode-content .card-title,
+.daymode-content input{
+   color:#3874de !important;
+}
+
+.daymode-content .card{
+   border:1px solid #222629 !important;
+   border-radius: 20px;
+   color:#e0e0e0 !important;
+   background-color: transparent !important;
 }
